# twinkly-f1

./: .gitignore  .gitmodules  CLAUDE.md  pyproject.toml
configs/: example.yaml  example_mosaic.yaml  layout_cinematic.yaml  layout_standard.yaml  layout_tight.yaml  monaco_centerline.geojson  monaco_loews.yaml  monaco_massenet.yaml  monaco_mosaic.yaml  monaco_tabac.yaml
docs/prd/: 0001-mvp-monaco-mockup.md
scripts/: build_monaco_mosaic.sh  derive_corner_poses.py  sizing_sweep.sh
src/twinkly_mockup/: __init__.py  car.py  centerline.py  cli.py  compose.py  config.py  led.py  mosaic.py  trajectory.py
tests/: test_car.py  test_centerline.py  test_cli_render.py  test_config.py  test_configs_shipped.py  test_led.py  test_mosaic.py  test_trajectory.py
