[project]
name = "twinkly-mockup"
version = "0.1.0"
description = "Twinkly Squares wall-display mockup for the Monaco F1 LEGO display"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pillow>=10.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.scripts]
twinkly-mockup = "twinkly_mockup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twinkly_mockup"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
