[project]
name = "twinkly-mockup"
version = "0.1.0"
description = "Twinkly Squares wall-display mockup for the Monaco F1 LEGO display"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pillow>=10.2",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pyyaml>=6.0",
]

[project.scripts]
twinkly-mockup = "twinkly_mockup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twinkly_mockup"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
# Submodules ship their own PEP 723 / standalone test suites with their own
# dependency stacks (e.g., racetrack-mosaic needs mercantile). They're not part
# of this project's test surface — run them via their own README.
norecursedirs = ["submodules", ".git", "out"]
